--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,6 +90,30 @@ body{
 .btn--logoprincipal {
     margin-left: 33%;
 }
+button:hover{
+    transform: scale(1.3);
+    background-color: chocolate;
+
+}
+
+.btn__animacion {
+    animation-duration: 5s;
+    animation-name: animacion_boton;
+    animation-iteration-count: infinite;
+}
+
+@keyframes animacion_boton {
+    0%{
+        width: 40%;
+    }
+    40%{
+        width: 60%;
+    }
+    100%{
+        width: 50%;
+    }
+
+}
 .inicio{
     margin: 3%;
     display: flex;
@@ -142,7 +166,7 @@ footer{
     font-size: larger;
     margin-top: 3%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow',
-     Arial, sans-serif;
+    Arial, sans-serif;
 }
 .contacto{
     display: flex;
